# movie_recommender

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  preprocessing.ipynb  pyproject.toml
.cursor/rules/: openmemory.mdc
app/: chat.py  config.py  ui.py  vector_store.py
app/domain/: prompts.py
app/workflow/: chains.py
backend/: .dockerignore  Dockerfile  preprocessing.ipynb
backend/app/: chat.py  config.py  ui.py  vector_store.py
backend/app/domain/: prompts.py
backend/app/workflow/: chains.py  edges.py  graph.py  nodes.py  state.py  tools.py
