[project]
name = "movie-recommender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google>=3.0.0",
    "google-cloud-storage>=3.10.1",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.27",
    "langchain-google-genai>=4.2.1",
    "langchain-huggingface>=1.2.1",
    "langgraph>=1.1.6",
    "pydantic-settings>=2.13.1",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.56.0",
    "torchvision>=0.26.0",
    "wikipedia>=1.4.0",
]
